--- a/ExampleCompanyApp.API/ExampleCompanyApp.API.csproj
+++ b/ExampleCompanyApp.API/ExampleCompanyApp.API.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.15">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -15,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ExampleCompanyApp.Caching\ExampleCompanyApp.Caching.csproj" />
     <ProjectReference Include="..\ExampleCompanyApp.Service\ExampleCompanyApp.Service.csproj" />
   </ItemGroup>
 
