--- a/ExampleCompanyApp.Caching/ExampleCompanyApp.Caching.csproj
+++ b/ExampleCompanyApp.Caching/ExampleCompanyApp.Caching.csproj
@@ -6,4 +6,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.15" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ExampleCompanyApp.Core\ExampleCompanyApp.Core.csproj" />
+    <ProjectReference Include="..\ExampleCompanyApp.Service\ExampleCompanyApp.Service.csproj" />
+  </ItemGroup>
+
 </Project>
