--- a/ExampleCompanyApp.MvcUI/ExampleCompanyApp.MvcUI.csproj
+++ b/ExampleCompanyApp.MvcUI/ExampleCompanyApp.MvcUI.csproj
@@ -1,10 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.5.2" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.6" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ExampleCompanyApp.Service\ExampleCompanyApp.Service.csproj" />
