--- a/ExampleCompanyApp.MvcUI/appsettings.json
+++ b/ExampleCompanyApp.MvcUI/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "ConnectionStrings": {
+    "SqlConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ExampleCompanyDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+
+  },
+  "BaseUrl":"https://localhost:7034/api/",
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
